--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                          <div class="col-lg-8 col-md-10 mx-auto col-12">
                               <div class="hero-text mt-5 text-center">
 
-                                    <h6 data-aos="fade-up" data-aos-delay="300">nMohamed Safras</h6>
+                                    <h6 data-aos="fade-up" data-aos-delay="300">Mohamed Safras</h6>
 
                                     <h1 class="text-white" data-aos="fade-up" data-aos-delay="500">Web Design & Developer</h1>
 
-                                    <a href="#feature" class="btn custom-btn mt-3" data-aos="fade-up" data-aos-delay="600">Get started</a>
+                                    <a href="mailto: safrasmohamed610@gmail.com" class="btn custom-btn mt-3" data-aos="fade-up" data-aos-delay="600">Contact Me</a>
 
-                                    <a href="#about" class="btn custom-btn bordered mt-3" data-aos="fade-up" data-aos-delay="700">learn more</a>
+                                    <a href="#ahttps://safras12.github.io/portfolio/" class="btn custom-btn bordered mt-3" data-aos="fade-up" data-aos-delay="700">my Portfolio</a>
                                    
                               </div>
                          </div>
