--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                                     <h1 class="text-white" data-aos="fade-up" data-aos-delay="500">Web Design & Developer</h1>
 
-                                    <a href="mailto: safrasmohamed610@gmail.com" class="btn custom-btn mt-3" data-aos="fade-up" data-aos-delay="600">Contact Me</a>
+                                    <a href="mailto: safrasmohamed610@gmail.com" class="btn custom-btn bordered mt-3" data-aos="fade-up" data-aos-delay="700">Contact Me</a>
 
                                     <a href="#ahttps://safras12.github.io/portfolio/" class="btn custom-btn bordered mt-3" data-aos="fade-up" data-aos-delay="700">my Portfolio</a>
                                    
