--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
                     </li>
                 </ul>
 
-                <ul class="social-icon ml-lg-3">
-                    <li><a href="https://www.facebook.com/safras.reigns" class="fa fa-facebook"></a></li>
+                <ul>
+		    <a href="https://www.facebook.com/safras.reigns" class="notification"> <span>FaceBook</span> <span class="badge">3</span> </a>
+                   <!-- <li><a href="https://www.facebook.com/safras.reigns" class="fa fa-facebook"></a></li>
                     <li><a href="https://www.linkedin.com/in/mohamed-safras-0880b6188/" class="fa fa-LinkedIn"></a></li>
-                    <li><a href="https://www.instagram.com/safras_remo/" class="fa fa-instagram"></a></li>
+                    <li><a href="https://www.instagram.com/safras_remo/" class="fa fa-instagram"></a></li>-->
                 </ul>
             </div>
 
@@ -105,7 +106,7 @@
                     <h2 class="mb-3 text-white" data-aos="fade-up">New to the gymso?</h2>
 
                     <h6 class="mb-4 text-white" data-aos="fade-up">Your membership is up to 2 months FREE ($62.50 per month)</h6>
-			<a href="#" class="notification"> <span>FaceBook</span> <span class="badge">3</span> </a>
+			
 
                     <p data-aos="fade-up" data-aos-delay="200">Gymso is free HTML template by <a rel="nofollow" href="https://www.tooplate.com" target="_parent">Tooplate</a> for your commercial website. Bootstrap v4.2.1 Layout. Feel free to use it.</p>
 
