--- a/index.html
+++ b/index.html
@@ -29,17 +29,18 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
 
-            <a class="navbar-brand" href="https://safras12.github.io/profile/">Mohamed Safras </a>
+            <a class="navbar-brand" href="https://www.facebook.com/safras.reigns" class="notification"> <span>FaceBook</span> <span class="badge">3</span> </a>
+	    
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-		    <ul>
+		    <!-- <ul>
 		    <a href="https://www.facebook.com/safras.reigns" class="notification"> <span>FaceBook</span> <span class="badge">3</span> </a>
-                   <!-- <li><a href="https://www.facebook.com/safras.reigns" class="fa fa-facebook"></a></li>
+                   <li><a href="https://www.facebook.com/safras.reigns" class="fa fa-facebook"></a></li>
                     <li><a href="https://www.linkedin.com/in/mohamed-safras-0880b6188/" class="fa fa-LinkedIn"></a></li>
-                    <li><a href="https://www.instagram.com/safras_remo/" class="fa fa-instagram"></a></li>-->
-                </ul>
+                    <li><a href="https://www.instagram.com/safras_remo/" class="fa fa-instagram"></a></li
+                </ul>>-->
             </button>
 
             <div class="collapse navbar-collapse" id="navbarNav">
