--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
 
-            <a href="https://www.linkedin.com/in/mohamed-safras-0880b6188/" class="notification"> <span>FaceBook</span> <span class="badge">3</span> </a>
+            <a href="https://www.linkedin.com/in/mohamed-safras-0880b6188/" class="notification"> <span>Mohamed Safras </span> <span class="badge">3</span> </a>
 	    
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
