--- a/index.html
+++ b/index.html
@@ -255,20 +255,20 @@
      </section>
 
 
-     <!-- SCHEDULE -->
+    					 <!--details -->
 			     <button class="accordion">Section 1</button>
 			<div class="panel">
-			  <p>more detais will be here</p>
+			  <li>more detais will be here</li>
 			</div>
 
 			<button class="accordion">Section 2</button>
 			<div class="panel">
-			  <p>more detais will be here</p>
+			  <li>more detais will be here</li>
 			</div>
 
 			<button class="accordion">Section 3</button>
 			<div class="panel">
-			  <p>more detais will be here</p>
+			  <li>more detais will be here</li>
 			</div>
 
      <!-- CONTACT -->
