--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 	4. Copy only URL and paste it within the src="" field below
 -->
                         <div class="google-map" data-aos="fade-up" data-aos-delay="900">
-                           <iframe src="https://maps.google.com/maps?q=Av.+Lúcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="1920" height="250" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d743.1183087222847!2d81.81042722913325!3d7.417698829547314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae53f0ce1fe8f67%3A0x40eb23caa18b1910!2sMake%20It%20Online!5e1!3m2!1sen!2slk!4v1637562409390!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                     
