--- a/index.html
+++ b/index.html
@@ -316,18 +316,18 @@
                <div class="row">
 
                     <div class="ml-auto col-lg-4 col-md-5">
-                        <p class="copyright-text">Copyright &copy; 2020 Gymso Fitness Co.
+                        <p class="copyright-text">Copyright &copy; 2021 mohamed safras.
                         
-                        <br>Design: <a href="https://www.tooplate.com">Tooplate</a></p>
+                        <br>Design: <a href="https://www.facebook.com/webdeveoper247/">MIO</a></p>
                     </div>
 
                     <div class="d-flex justify-content-center mx-auto col-lg-5 col-md-7 col-12">
                         <p class="mr-4">
                             <i class="fa fa-envelope-o mr-1"></i>
-                            <a href="#">hello@company.co</a>
+                            <a href="mailto: safrasmohamed610@gmail.com">safrasmohamed610@gmail.com</a>
                         </p>
 
-                        <p><i class="fa fa-phone mr-1"></i> 010-020-0840</p>
+                        <p><i class="fa fa-phone mr-1"></i> +94 779 593 910</p>
                     </div>
                     
                </div>
