--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="#class" class="nav-link smoothScroll">QLFCTN</a>
+                        <a href="#class" class="nav-link smoothScroll">QLFCN</a>
                     </li>
 
                     <li class="nav-item">
@@ -103,14 +103,14 @@
             <div class="row">
 
                 <div class="d-flex flex-column justify-content-center ml-lg-auto mr-lg-5 col-lg-5 col-md-6 col-12">
-                    <h2 class="mb-3 text-white" data-aos="fade-up">New to the gymso?</h2>
+                    <h2 class="mb-3 text-white" data-aos="fade-up">welcome to the tech era</h2>
 
-                    <h6 class="mb-4 text-white" data-aos="fade-up">Your membership is up to 2 months FREE ($62.50 per month)</h6>
+                    <h6 class="mb-4 text-white" data-aos="fade-up">I am asoftware engineering student form Sri Lanka</h6>
 			
 
-                    <p data-aos="fade-up" data-aos-delay="200">Gymso is free HTML template by <a rel="nofollow" href="https://www.tooplate.com" target="_parent">Tooplate</a> for your commercial website. Bootstrap v4.2.1 Layout. Feel free to use it.</p>
+                    <p data-aos="fade-up" data-aos-delay="200">this website is created by myself in github. <a rel="nofollow" href="https://github.com/safras12" target="_parent">my GitHug page</a>feel ree to take chat with me </p>
 
-                    <a href="#" class="btn custom-btn bg-color mt-3" data-aos="fade-up" data-aos-delay="300" data-toggle="modal" data-target="#membershipForm">Become a member today</a>
+                    <a href="#" class="btn custom-btn bg-color mt-3" data-aos="fade-up" data-aos-delay="300" data-toggle="modal" data-target="#membershipForm">apply for a chat </a>
                 </div>
 
                 <div class="mr-lg-auto mt-3 col-lg-4 col-md-6 col-12">
@@ -144,11 +144,11 @@
                     <div class="row">
 
                             <div class="mt-lg-5 mb-lg-0 mb-4 col-lg-5 col-md-10 mx-auto col-12">
-                                <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">Hello, we are Gymso</h2>
+                                <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">want to know about me?</h2>
 
-                                <p data-aos="fade-up" data-aos-delay="400">You are NOT allowed to redistribute this HTML template downloadable ZIP file on any template collection site. You are allowed to use this template for your personal or business websites.</p>
+                                <p data-aos="fade-up" data-aos-delay="400">here is my CV and Portfolio for your reference </p>
 
-                                <p data-aos="fade-up" data-aos-delay="500">If you have any question regarding <a rel="nofollow" href="https://www.tooplate.com/view/2119-gymso-fitness" target="_parent">Gymso Fitness HTML template</a>, you can <a rel="nofollow" href="https://www.tooplate.com/contact" target="_parent">contact Tooplate</a> immediately. Thank you.</p>
+                                <p data-aos="fade-up" data-aos-delay="500">If you have any question regarding <a rel="nofollow" href="#" target="_parent">my CV and Portfolio </a>, you can <a rel="nofollow" href="mailto :safrasmohamed610@gmail.com" target="_parent">contact me</a> immediately. Thank you.</p>
 
                             </div>
 
