--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="d-flex flex-column justify-content-center ml-lg-auto mr-lg-5 col-lg-5 col-md-6 col-12">
                     <h2 class="mb-3 text-white" data-aos="fade-up">welcome to the tech era</h2>
 
-                    <h6 class="mb-4 text-white" data-aos="fade-up">I am asoftware engineering student form Sri Lanka</h6>
+                    <h6 class="mb-4 text-white" data-aos="fade-up">I am a software engineering student | Front-end Developer </h6>
 			
 
                     <p data-aos="fade-up" data-aos-delay="200">this website is created by myself in github. <a rel="nofollow" href="https://github.com/safras12" target="_parent">my GitHug page</a>feel ree to take chat with me </p>
