--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <h6 class="mb-4 text-white" data-aos="fade-up">I am a software engineering student | Front-end Developer </h6>
 			
 
-                    <p data-aos="fade-up" data-aos-delay="200">this website is created by myself in github. <a rel="nofollow" href="https://github.com/safras12" target="_parent"> my GitHug page</a> feel ree to take chat with me </p>
+                    <p data-aos="fade-up" data-aos-delay="200">this website is created by myself in github. <a rel="nofollow" href="https://github.com/safras12" target="_parent"> my GitHub page</a> feel ree to take chat with me </p>
 
                     <a href="#" class="btn custom-btn bg-color mt-3" data-aos="fade-up" data-aos-delay="300" data-toggle="modal" data-target="#membershipForm">apply for a chat </a>
                 </div>
