--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 
                                     <div class="team-info d-flex flex-column">
 
-                                        <h3>Mary Yan</h3>
-                                        <span>Yoga Instructor</span>
+                                        <h3> Curriculum Vitae </h3>
+                                        <span> <a style="text-decoration:none" class="glow" href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> View </a> </span>
 
                                         <ul class="social-icon mt-3">
                                             <li><a href="#" class="fa fa-twitter"></a></li>
