--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
      <link rel="stylesheet" href="bootstrap.min.css">
      <link rel="stylesheet" href="font-awesome.min.css">
      <link rel="stylesheet" href="aos.css">
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spectral|Rubik">
 
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="tooplate-gymso-style.css">
 	
 </head>
 <body data-spy="scroll" data-target="#navbarNav" data-offset="50">
-
+{
+  font-family: Rubik, sans-serif;
+  font-size: 16px;
+}
     <!-- MENU BAR -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
@@ -159,7 +163,7 @@
                                     <div class="team-info d-flex flex-column">
 
                                         <h3> Curriculum Vitae </h3>
-                                        <span> <a style="text-decoration:none" class="glow" href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> View </a> </span>
+                                        <span> <a style="text-decoration:none" class="glow" href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> View or Download </a> </span>
 
                                         <ul class="social-icon mt-3">
                                             <li><a href="#" class="fa fa-twitter"></a></li>
@@ -175,8 +179,8 @@
 
                                     <div class="team-info d-flex flex-column">
 
-                                        <h3>Catherina</h3>
-                                        <span>Body trainer</span>
+                                        <h3> Portfolio </h3>
+                                 <span><span> <a style="text-decoration:none" class="glow" href="https://drive.google.com/file/d/1LAwlcbQ_HHBWexQm5wQTK-hUhnDTVsRX/view"> View or Download </a> </span> </span>
 
                                         <ul class="social-icon mt-3">
                                             <li><a href="#" class="fa fa-instagram"></a></li>
@@ -255,7 +259,7 @@
      </section>
 
 
-    					 <!--details -->
+    					 <!--section 
 			     <button class="accordion">Section 1</button>
 			<div class="panel">
 			  <li>more detais will be here</li>
@@ -270,6 +274,33 @@
 			<div class="panel">
 			  <li>more detais will be here</li>
 			</div>
+-->
+						<h1>My Skills</h1>
+
+					<p>HTML</p>
+					<div class="container">
+					  <div class="skills html">98%</div>
+					</div>
+
+					<p>CSS</p>
+					<div class="container">
+					  <div class="skills css">80%</div>
+					</div>
+
+					<p>JavaScript</p>
+					<div class="container">
+					  <div class="skills js">75%</div>
+					</div>
+
+					<p>PHP</p>
+					<div class="container">
+					  <div class="skills php">70%</div>
+					</div>
+
+					<p>WordPress</p>
+					<div class="container">
+					  <div class="skills wordpress">90%</div>
+					</div>
 
      <!-- CONTACT -->
      <section class="contact section" id="contact">
