--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +16,6 @@
      <link rel="stylesheet" href="bootstrap.min.css">
      <link rel="stylesheet" href="font-awesome.min.css">
      <link rel="stylesheet" href="aos.css">
-     
 
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="tooplate-gymso-style.css">
@@ -160,7 +157,7 @@
                                     <div class="team-info d-flex flex-column">
 
                                         <h3> Curriculum Vitae </h3>
-                                        <span> <a style="text-decoration:none" class="glow" href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> View or Download </a> </span>
+                                        <span> <a style="text-decoration:none" class="glow" href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> View </a> </span>
 
                                         <ul class="social-icon mt-3">
                                             <li><a href="#" class="fa fa-twitter"></a></li>
@@ -176,8 +173,8 @@
 
                                     <div class="team-info d-flex flex-column">
 
-                                        <h3> Portfolio </h3>
-                                 <span><span> <a style="text-decoration:none" class="glow" href="https://drive.google.com/file/d/1LAwlcbQ_HHBWexQm5wQTK-hUhnDTVsRX/view"> View or Download </a> </span> </span>
+                                        <h3>Catherina</h3>
+                                        <span>Body trainer</span>
 
                                         <ul class="social-icon mt-3">
                                             <li><a href="#" class="fa fa-instagram"></a></li>
@@ -256,7 +253,7 @@
      </section>
 
 
-    					 <!--section 
+    					 <!--details -->
 			     <button class="accordion">Section 1</button>
 			<div class="panel">
 			  <li>more detais will be here</li>
@@ -271,8 +268,6 @@
 			<div class="panel">
 			  <li>more detais will be here</li>
 			</div>
--->
-
 
      <!-- CONTACT -->
      <section class="contact section" id="contact">
