--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
      <link rel="stylesheet" href="bootstrap.min.css">
      <link rel="stylesheet" href="font-awesome.min.css">
      <link rel="stylesheet" href="aos.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="tooplate-gymso-style.css">
@@ -160,8 +161,8 @@
                                         <span> <a style="text-decoration:none" class="glow" href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> View </a> </span>
 
                                         <ul class="social-icon mt-3">
-                                            <li><a href="#" class="fa fa-twitter"></a></li>
-                                            <li><a href="#" class="fa fa-instagram"></a></li>
+                                            <li><div id="charging" class="fa"></div></a></li>
+                                            
                                         </ul>
                                     </div>
                                 </div>
@@ -174,11 +175,11 @@
                                     <div class="team-info d-flex flex-column">
 
                                         <h3>Catherina</h3>
-                                        <span>Body trainer</span>
+                                        <span><span> <a style="text-decoration:none" class="glow" href="https://drive.google.com/file/d/1LAwlcbQ_HHBWexQm5wQTK-hUhnDTVsRX/view"> View </a> </span>
 
                                         <ul class="social-icon mt-3">
-                                            <li><a href="#" class="fa fa-instagram"></a></li>
-                                            <li><a href="#" class="fa fa-facebook"></a></li>
+                                            <li><div id="charging" class="fa"></div></a></li>
+                                            
                                         </ul>
                                     </div>
                                 </div>
