--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
      <title>Mohamed Safras </title>
 	
 
-
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="">
@@ -161,7 +160,7 @@
                                         <span> <a style="text-decoration:none" class="glow" href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> View </a> </span>
 
                                         <ul class="social-icon mt-3">
-                                            <li><div id="charging" class="fa"></div></a></li>
+                                            <li> <div id="charging" class="fa" > </div></li>
                                             
                                         </ul>
                                     </div>
