--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                         <h3> Curriculum Vitae </h3>
                                         <span> <a style="text-decoration:none" class="glow" href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> View </a> </span>
 
-                                        <ul class="social-icon mt-3">
+                                        <div id="div1" class="fa"> </div>
                                             <li> <div id="charging" class="fa" > </div></li>
                                             
                                         </ul>
@@ -176,7 +176,7 @@
                                         <h3>Portfolio</h3>
                                         <span><span> <a style="text-decoration:none" class="glow" href="https://drive.google.com/file/d/1LAwlcbQ_HHBWexQm5wQTK-hUhnDTVsRX/view"> View </a> </span>
 
-                                        <ul class="social-icon mt-3">
+                                        <div id="div1" class="fa"> </div>
                                             <li> <div id="charging" class="fa"> </div> </a></li>
                                             
                                         </ul>
