--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                                 <p data-aos="fade-up" data-aos-delay="400">here is my CV and Portfolio for your reference </p>
 
-                                <p data-aos="fade-up" data-aos-delay="500">If you have any question regarding <a rel="nofollow" href="#" target="_parent">my CV and Portfolio </a>, you can <a rel="nofollow" href="mailto :safrasmohamed610@gmail.com" target="_parent">contact me</a> immediately. Thank you.</p>
+                                <p data-aos="fade-up" data-aos-delay="500">If you have any question regarding <a rel="nofollow" href="#" target="_parent">my CV  </a>, you can <a rel="nofollow" href="mailto :safrasmohamed610@gmail.com" target="_parent">contact me</a> immediately. Thank you.</p>
 
                             </div>
 
