--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <div class="mt-lg-5 mb-lg-0 mb-4 col-lg-5 col-md-10 mx-auto col-12">
                                 <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">want to know about me?</h2>
 
-                                <p data-aos="fade-up" data-aos-delay="400">here is my CV and Portfolio for your reference </p>
+                                <p data-aos="fade-up" data-aos-delay="400">here is my CV for your reference </p>
 
                                 <p data-aos="fade-up" data-aos-delay="500">If you have any question regarding <a rel="nofollow" href="#" target="_parent">my CV  </a>, you can <a rel="nofollow" href="mailto :safrasmohamed610@gmail.com" target="_parent">contact me</a> immediately. Thank you.</p>
 
@@ -158,9 +158,7 @@
                                     <div class="team-info d-flex flex-column">
 
                                         <h3> Curriculum Vitae </h3>
-                                        <span> <a style="text-decoration:none" class="glow" href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> View or Download </a><div id="charging" class="fa" > </div> </span>
-							
-                                       		           
+                                        <span> <a style="text-decoration:none" class="glow" href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> View or Download </a> </span>                             		           
                                         </ul>
                                     </div>
                                 </div>
