--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
 
                             <div class="ml-lg-auto col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="700">
                                 <div class="team-thumb">
-                                    <img src="team-image01.jpg" class="img-fluid" alt="Trainer">
+                                    <a href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> <img src="team-image01.jpg"  class="img-fluid" alt="Trainer"> </a>
 
                                     <div class="team-info d-flex flex-column">
 
-                                        <h3> Curriculum Vitae </h3>
-                                        <span> <a style="text-decoration:none" class="glow" href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> View or Download </a> </span>
+                                        <h3><a href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> Curriculum Vitae </a></h3>
+                                        <span> <a style="text-decoration:none" href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> View or Download </a> </span>
 							<div id="div1" class="fa"> </div>
                                        		           
                                         </ul>
