--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
 
                             <div class="mr-lg-auto mt-5 mt-lg-0 mt-md-0 col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="800">
                                 <div class="team-thumb">
-                                    <img src="team-image.jpg" class="img-fluid" alt="Trainer">
+                                    <a href="https://safras12.github.io/portfolio/"> <img src="team-image.jpg" class="img-fluid" alt="Trainer"></a>
 
                                     <div class="team-info d-flex flex-column">
 
-                                        <h3>Portfolio</h3>
+                                        <h3><a href="https://safras12.github.io/portfolio/">Portfolio</a></h3>
                                         <span><span> <a style="text-decoration:none" class="glow" href="https://safras12.github.io/portfolio/"> Visit Site </a> </span>
 
                                              <div id="div1" class="fa"> </div>
