--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                     <div class="team-info d-flex flex-column">
 
                                         <h3><a href="https://safras12.github.io/portfolio/">Portfolio</a></h3>
-                                        <span><span> <a style="text-decoration:none" class="glow" href="https://safras12.github.io/portfolio/"> Visit Site </a> </span>
+                                        <span><span> <a style="text-decoration:none" href="https://safras12.github.io/portfolio/"> Visit Site </a> </span>
 
                                              <div id="div1" class="fa"> </div>
                                              
