--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="tooplate-gymso-style.css">
+	<link href="https://fonts.googleapis.com/css?family=Aldrich" rel="stylesheet">
 	
 </head>
 <body data-spy="scroll" data-target="#navbarNav" data-offset="50">
 
     <!-- MENU BAR -->
+	
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
 
@@ -145,7 +147,7 @@
                             <div class="mt-lg-5 mb-lg-0 mb-4 col-lg-5 col-md-10 mx-auto col-12">
                                 <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">want to know about me?</h2>
 
-                                <p data-aos="fade-up" data-aos-delay="400">here is my CV and Portfolio for your reference </p>
+                                <p data-aos="fade-up" data-aos-delay="400"> here is my CV and Portfolio for your reference </p>
 
                                 <p data-aos="fade-up" data-aos-delay="500">If you have any question regarding <a rel="nofollow" href="#" target="_parent">my CV and Portfolio </a>, you can <a rel="nofollow" href="mailto :safrasmohamed610@gmail.com" target="_parent">contact me</a> immediately. Thank you.</p>
 
@@ -157,8 +159,8 @@
 
                                     <div class="team-info d-flex flex-column">
 
-                                        <h3><a href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> Curriculum Vitae </a></h3>
-                                        <span> <a style="text-decoration:none" href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> View or Download </a> </span>
+                                        <h3 font-family="Aldrich"><a href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> Curriculum Vitae </a></h3>
+                                        <span font-family="Aldrich"> <a style="text-decoration:none" href="https://drive.google.com/file/d/1QDXCk3XI5Pm0iHKBUP5RpM1ga3j4X_F1/view"> View or Download </a> </span>
 							<div id="div1" class="fa"> </div>
                                        		           
                                         </ul>
@@ -174,8 +176,8 @@
 
                                     <div class="team-info d-flex flex-column">
 
-                                        <h3><a href="https://safras12.github.io/portfolio/">Portfolio</a></h3>
-                                        <span><span> <a style="text-decoration:none" href="https://safras12.github.io/portfolio/"> Visit Site </a> </span>
+                                        <h3 font-family="Aldrich"><a href="https://safras12.github.io/portfolio/">Portfolio</a></h3>
+                                        <span font-family="Aldrich"><span> <a style="text-decoration:none" href="https://safras12.github.io/portfolio/"> Visit Site </a> </span>
 
                                              <div id="div1" class="fa"> </div>
                                              
