--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                                     <h1 class="text-white" data-aos="fade-up" data-aos-delay="500">Web Design & Developer</h1>
 
                                     <a href="mailto: safrasmohamed610@gmail.com" class="btn custom-btn bordered mt-3" data-aos="fade-up" data-aos-delay="700">Contact Me</a>
+				      <a href="https://safras12.github.io/profile/pricing.html/" class="btn custom-btn bordered mt-3" data-aos="fade-up" data-aos-delay="700">Pricing</a>
 
                                     <a href="https://safras12.github.io/portfolio/" class="btn custom-btn bordered mt-3" data-aos="fade-up" data-aos-delay="700">my Portfolio</a>
                                    
